--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,15 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <fragment
-            android:id="@+id/start_page"
-            android:name="com.wildcatbank2.StartPage"
+        <fragment android:name="com.wildcatbank2.AccountTabs"
+            android:id="@+id/accounttabs"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout="@layout/fragment_start_page" />
+            android:layout_height="58dp"
+            tools:layout="@layout/fragment_account_tabs"
+            android:layout_marginTop="58dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
     </RelativeLayout>
 
 </android.support.v4.widget.DrawerLayout>
