--- a/app/src/main/res/layout/activity_locate.xml
+++ b/app/src/main/res/layout/activity_locate.xml
@@ -17,17 +17,17 @@
         android:background="#40479b"
         android:textColor="#FFFFFF"
         android:textSize="20dp"
+        android:layout_marginTop="108dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp" />
+        android:layout_alignParentEnd="true" />
 
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:id="@+id/radioGroup"
+        android:background="#FFFFFF"
         android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:background="#FFFFFF">
+        android:layout_alignParentEnd="true">
 
         <RadioButton
             android:layout_width="wrap_content"
