--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,10 +13,11 @@
         <menu>
             <item
                 android:id="@+id/nav_transfer"
-
+                android:icon="@drawable/transfer_action_name"
                 android:title="Transfer Money" />
             <item
                 android:id="@+id/nav_deposit"
+                android:icon="@drawable/payments_action_name"
                 android:title="Deposit Checks" />
         </menu>
     </item>
@@ -24,9 +25,11 @@
         <menu>
             <item
                 android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_menu_manage"
                 android:title="Settings" />
             <item
                 android:id="@+id/nav_locations"
+                android:icon="@drawable/places_ic_search"
                 android:title="Locations" />
         </menu>
     </item>
