Added some new vector graphics for the activity drawer.  Made rounded corners on contact dialog.  Added a hard coded location of an ATM so the map includes my location and the ATM location.

--- a/app/src/main/res/drawable/dialog_shape.xml
+++ b/app/src/main/res/drawable/dialog_shape.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:centerColor="#FF3D68A3"
-        android:endColor="#FF3D69C5"
+        android:centerColor="#5f96e3"
+        android:endColor="#FFFFFF"
         android:startColor="#5f96e3"
 
         android:type="linear" />
