--- a/app/src/main/res/layout/fragment_deposit.xml
+++ b/app/src/main/res/layout/fragment_deposit.xml
@@ -29,8 +29,9 @@
 
         android:layout_gravity="left|center_vertical"
         android:background="#385cd1"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/button6" />
+        android:layout_marginTop="44dp"
+        android:layout_below="@+id/textView3"
+        android:layout_alignStart="@+id/button5" />
 
     <ImageView
         android:layout_width="133dp"
@@ -39,7 +40,7 @@
         android:id="@+id/imageView3"
         android:layout_gravity="right|center_vertical"
         android:background="#385cd1"
-        android:layout_above="@+id/button5"
+        android:layout_alignTop="@+id/imageView2"
         android:layout_alignEnd="@+id/button4" />
 
     <Button
@@ -48,31 +49,37 @@
         android:text="Check Front"
         android:layout_marginLeft="40dp"
         android:id="@+id/button4"
+        android:drawableLeft="@drawable/ic_menu_camera"
         android:layout_gravity="left|bottom"
-        android:background="#385cd1"
         android:textColor="#FFFFFF"
+        android:background="@drawable/button_gradient"
         android:layout_alignTop="@+id/button5"
-        android:layout_toStartOf="@+id/button6" />
+        android:layout_toStartOf="@+id/button6"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_menu_camera"
         android:text="Check Back"
         android:layout_marginRight="40dp"
         android:id="@+id/button5"
-        android:background="#385cd1"
+        android:background="@drawable/button_gradient"
         android:layout_gravity="right|bottom"
         android:textColor="#FFFFFF"
         android:layout_below="@+id/imageView2"
         android:layout_toEndOf="@+id/button6"
-        android:layout_marginTop="46dp" />
+        android:layout_marginTop="46dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
         android:id="@+id/button6"
-        android:background="#385cd1"
+        android:background="@drawable/button_gradient"
         android:layout_below="@+id/button4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="41dp"
