--- a/app/src/main/res/layout/fragment_button_sign_in.xml
+++ b/app/src/main/res/layout/fragment_button_sign_in.xml
@@ -40,6 +40,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="end"
         android:background="@drawable/button_gradient"
+        android:drawableLeft="@drawable/places_ic_search"
         android:longClickable="true"
         android:textColor="#FFFFFF" />
 
