--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,12 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="User Name"
         android:ems="10"
         android:id="@+id/editText2"
         android:layout_gravity="center"
         android:textColor="#FFFFFF"
-        android:layout_below="@+id/imageView4"
+        android:layout_above="@+id/editText3"
         android:layout_centerHorizontal="true" />
 
     <EditText
